'增加服务状态实时监听'